--- a/Source/Service/Casshan.Service.csproj
+++ b/Source/Service/Casshan.Service.csproj
@@ -7,4 +7,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Logging\Casshan.Logging.csproj" />
+  </ItemGroup>
 </Project>
