--- a/Source/Service/Casshan.Service.csproj
+++ b/Source/Service/Casshan.Service.csproj
@@ -4,10 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
-    <PackageReference Include="System.Net.Http" Version="4.3.4" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\Logging\Casshan.Logging.csproj" />
+    <ProjectReference Include="..\RiotApi\Casshan.RiotApi.csproj" />
   </ItemGroup>
 </Project>
